--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         </div> 
         <div id="banner">
                 <div id="bimg">
-                    <img src="Minimalism and simplifying life principle  green n.jpg" alt="">
-                    <img src="Paper collage art by Henri Matisse of a scenery.jpg" alt="">
+                    <img src="Minimalism and simplifying life principle  green n (1).webp" alt="">
+                    <img src="Paper collage art by Henri Matisse of a scenery (1).webp" alt="">
                 </div>
                 <div id="btext">
                     <h1>Pollution free</h1>
